test/testdata/nil/not_callable_error.lox
nil(); // error: 'nil' value is not callable
